# Braaiton-Backend

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
data/: models.json
src/booking_service/: cron.py  repository.py  urls.py
src/booking_service/dataclasses/: __init__.py  booking.py
src/booking_service/enums/: __init__.py  booking_stage.py
src/booking_service/migrations/: 0001_initial.py  0002_bookingmodel_payment_id.py  0003_remove_bookingmodel_payment_id.py  0004_bookingmodel_payment_id.py
src/booking_service/models/: __init__.py
src/booking_service/serializers/: __init__.py  create_booking.py
src/booking_service/service/: __init__.py  api.py
src/booking_service/views/: __init__.py  activate_booking.py  active_bookings.py  cancel_reservation.py  create_booking.py  get_booking.py
src/inventory_service/: repository.py  urls.py
src/inventory_service/dataclasses/: inventory_item.py
src/inventory_service/enums/: __init__.py  inventory_state.py
src/inventory_service/migrations/: 0001_initial.py  0002_alter_inventorymodel_is_available.py  0003_remove_inventorymodel_is_available_and_more.py
src/inventory_service/models/: __init__.py
src/inventory_service/serializers/: __init__.py  inventory_model.py
src/inventory_service/service/: __init__.py  api.py
src/inventory_service/views/: __init__.py  add_inventory_model.py  get_available_models.py  get_item_availablity.py  mark_as_available.py  (+1 more)
src/payment_service/: repository.py  urls.py
src/project/: asgi.py  settings.py  urls.py  wsgi.py
src/qrcode_service/: apps.py  urls.py
(+25 files in other folders)
